Almost Done the Computer Network

--- a/src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Computer_Network_6P403.html
@@ -417,21 +417,21 @@
                 <div class="horizontal-scroll">
                     <div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
+                            src="https://img.youtube.com/vi/JFF2vJaN0Cw/hqdefault.jpg"
                             onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
-                        <p class="pdf-title">Video Title</p>
-                        <p class="pdf-author">Author Name</p>
-                        <a href="document.pdf" class="download-link">View</a>
+                        <p class="pdf-title">Computer Network Playlist</p>
+                        <p class="pdf-author">Author Name : Unknown</p>
+                        <a href="https://youtube.com/playlist?list=PLxCzCOWd7aiGFBD2-2joCpWOLUrDLvVV_&si=uoLdgNBx4FAu8Qfw" class="download-link">View</a>
                     </div>
                     <div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
+                            src="https://img.youtube.com/vi/VwN91x5i25g/hqdefault.jpg"
                             onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
-                        <p class="pdf-title">Video Title</p>
-                        <p class="pdf-author">Author Name</p>
-                        <a href="document.pdf" class="download-link">View</a>
+                        <p class="pdf-title">Computer Network</p>
+                        <p class="pdf-author">Author Name : Unknown</p>
+                        <a href="https://youtube.com/playlist?list=PLBlnK6fEyqRgMCUAG0XRw78UA8qnv6jEx&si=-4yRAfBoq2LjkAnn" class="download-link">View</a>
                     </div>
                 </div>
             </section>
