Added resourse of 1 year 7th revision

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-        <title>Index - Moderna Bootstrap Template</title>
+        <title>ASCE and AIDIAS Committee</title>
         <meta name="description" content="" />
         <meta name="keywords" content="" />
 
