--- a/resources.html
+++ b/resources.html
@@ -99,11 +99,24 @@
                             <h4 class="semester">Semester 1 (CO)</h4>
                             <div class="card">
                                 <p>
-                                    <strong>M1 (BMT)</strong> - Basic
+                                    <strong>M1(BMS)</strong> - Basic
                                     Mathematics
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/Basic_Math_7G501.html"
+                                    class="download-btn">
+                                    Visit Page</a>
+                            </div>
+                        </div>
+                        <div
+                            class="subject-card"
+                            data-branch="CO"
+                            data-year="year1"
+                            style="display: none">
+                            <div class="card">
+                                <p><strong>CPR</strong> - C Programming</p>
+                                <a
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/CProgramming_7R104.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -115,9 +128,9 @@
                             data-year="year1"
                             style="display: none">
                             <div class="card">
-                                <p><strong>EP</strong> - Engineering Physics</p>
+                                <p><strong>CMS</strong> - Communication Skills</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/cms_7G502.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -130,11 +143,11 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>FCIT</strong> - Fundamentals of
+                                    <strong>ICT/FCIT</strong> - Fundamentals of
                                     Computer & Internet Technology
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/ict_7G601.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -147,11 +160,10 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>BCS</strong> - Basics Computer
-                                    Systems
+                                    <strong>WPD</strong> - Web Page Designing
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/wpd_7R105.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -163,26 +175,9 @@
                             data-year="year1"
                             style="display: none">
                             <div class="card">
-                                <p><strong>ENG</strong> - English</p>
+                                <p><strong>WPC</strong> - Computer Engineering Workshop Practice</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
-                                    class="download-btn"
-                                    >Visit Page</a
-                                >
-                            </div>
-                        </div>
-                        <div
-                            class="subject-card"
-                            data-branch="CO"
-                            data-year="year1"
-                            style="display: none">
-                            <div class="card">
-                                <p>
-                                    <strong>DLS</strong> - Development of Life
-                                    Skill
-                                </p>
-                                <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/wpc_7R603.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -195,15 +190,16 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>EVS</strong> - Environmental Science
+                                    <strong>YGMD</strong> - Yoga and Meditation
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem 1/Yoga_Meditation_7G301.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
                             </div>
                         </div>
+                        <!-- CO semester 2 Subjects-->
                         <div
                             class="subject-card"
                             data-branch="CO"
@@ -212,11 +208,11 @@
                             <h4 class="semester">Semester 2 (CO)</h4>
                             <div class="card">
                                 <p>
-                                    <strong>M2 (EMT)</strong> - Engineering
+                                    <strong>M2(AMS)</strong> - Applied
                                     Mathematics
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/ams_7G503.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -229,10 +225,10 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>EC</strong> - Engineering Chemistry
+                                    <strong>BSC</strong> - Basic Science
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/bsc_7G101.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -244,9 +240,9 @@
                             data-year="year1"
                             style="display: none">
                             <div class="card">
-                                <p><strong>WP</strong> - Workshop Practice</p>
+                                <p><strong>BPD</strong> - Basic Personality Development</p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/bpd_7G302.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -259,25 +255,27 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>EEE</strong> - Elements of
-                                    Electronics & Electrical Engineering
+                                    <strong>PCO</strong> - Proffessional Communication
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/pco_7G602.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
                             </div>
                         </div>
+                        
                         <div
                             class="subject-card"
                             data-branch="CO"
                             data-year="year1"
                             style="display: none">
                             <div class="card">
-                                <p><strong>CP</strong> - C Programming</p>
+                                <p>
+                                    <strong>BLP</strong> - Linux Basic
+                                </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/blp_7R106.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
@@ -290,16 +288,16 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>SWPDL</strong> - Static Web Page
-                                    Designing Lab
+                                    <strong>DSU</strong> - Data Structure using C
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/dsu_7R107.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
                             </div>
                         </div>
+                        
                         <div
                             class="subject-card"
                             data-branch="CO"
@@ -307,10 +305,10 @@
                             style="display: none">
                             <div class="card">
                                 <p>
-                                    <strong>CMS</strong> - Communication Skills
+                                    <strong>BEE</strong> - Basic Electrical & Electronics Engineering
                                 </p>
                                 <a
-                                    href="./src/pages/resources/subject_page_template.html"
+                                    href="./src/pages/resources/co-resources/Year 1/Sem2/bee_7R505.html"
                                     class="download-btn"
                                     >Visit Page</a
                                 >
