--- a/src/pages/footer.html
+++ b/src/pages/footer.html
@@ -39,8 +39,8 @@
                                 Bhavsar</a></li>
                         <li><a href="mailto:surajwakhure@gmail.com"><i class="fa fa-envelope"></i> Suraj Wakhure</a>
                         </li>
-                        <li><a href="https://maps.app.goo.gl/umvXkpvA4B2TtR2W8"><i class="fas fa-map-marker-alt"></i>
-                                Government Polytechnic, Ch. Sambhajinagar</a></li>
+                        <li><a href="mailto:vishalrathod.dev@gmail.com"><i class="fa fa-envelope"></i>
+                                Vishal Rathod</a></li>
                     </ul>
                 </div>
                 <div class="footer-col">
