--- a/src/pages/resources/co-resources/Year 1/Sem2/pco_7G602.html
+++ b/src/pages/resources/co-resources/Year 1/Sem2/pco_7G602.html
@@ -42,9 +42,9 @@
         <!-- Main -->
         <div class="breadcrumb">
             <a href="#">CO</a>
-            <a href="#">3rd Year</a>
-            <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">1st Year</a>
+            <a href="#">2nd Semester</a>
+            <a href="#">Proffessional Communication</a>
         </div>
 
         <main>
@@ -52,29 +52,29 @@
                 src="subject_image.jpg"
                 alt="Subject Image"
                 class="subject-image"
-                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
+                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Subject Title</h1>
+                <h1>Proffessional Communication</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">CODE123</span>
+                    <span class="tag">7G602</span>
                 </p>
                 <p>
-                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    <strong>Type:</strong> <span class="tag"></span
                     ><span class="tag">Practical</span>
                 </p>
                 <p>
-                    <strong>Category:</strong> <span class="tag">Degree</span>
+                    <strong>Category:</strong> <span class="tag">Non-Degree</span>
                 </p>
-                <p><strong>Revision:</strong> <span class="tag">6th</span></p>
+                <p><strong>Revision:</strong> <span class="tag">7th</span></p>
             </section>
 
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
                     This subject introduces the fundamental concepts required
-                    for mastering the field.
+                    for mastering the field of Communication.
                 </p>
             </section>
 
@@ -84,36 +84,46 @@
                     <table class="modern-table">
                         <thead>
                             <tr>
-                                <th colspan="2">Theory</th>
-                                <th colspan="2">Practical</th>
-                                <th rowspan="2">Total</th>
+                                <th colspan="2" rowspan="2">Theory</th>
+                                <th colspan="2">Based on LL & TSL</th>
+                                <th rowspan="2">Based on SL</th>
+                                <th rowspan="3">Total Marks</th>
                             </tr>
                             <tr>
-                                <th>ESE</th>
-                                <th>PT</th>
-                                <th>ESE #(OR)</th>
-                                <th>PA (TW)</th>
+                                <th colspan="2">Practical</th>
+                            </tr>
+                            <tr>
+                                <th>FA - TH</th>
+                                <th>SA - TH</th>
+                                <th>FA - PR</th>
+                                <th>SA - PR</th>
+                                <th>SLA</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
-                                <td>80</td>
-                                <td>20</td>
-                                <td>25</td>
-                                <td>25</td>
-                                <td>150</td>
+                                <td>00</td> <!-- FA TH-->
+                                <td>00</td> <!-- SA TH-->
+                                <td>25</td> <!-- FA PR-->
+                                <td>25</td> <!-- SA PR-->
+                                <td>00</td> <!-- SLA-->
+                                <td>50</td> <!-- Total-->
                             </tr>
                         </tbody>
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
-                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
-                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
-                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
-                    Practical Examination, <b>OR</b>– Oral Examination,
-                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
-                    examination
+                    Abbreviations: <b>CL</b>- ClassRoom Learning , <b>TL</b>-
+                    Tutorial Learning, <b>LL</b>-Laboratory Learning,
+                    <b>SLH</b>-Self Learning Hours, <b>NLH</b>-Notional Learning
+                    Hours, <b>FA</b> - Formative Assessment,
+                    <b>SA</b> -Summative assessment, <b>IKS</b> - Indian
+                    Knowledge System, <b>SLA</b> - Self Learning Assessment
+                </p>
+                <p>
+                    Legends: <b>@</b> Internal Assessment, <b>#</b> External
+                    Assessment, <b>*#</b> On Line Examination ,
+                    <b>@$</b> Internal Online Examination
                 </p>
             </section>
 
