--- a/src/pages/resources/subject_template_7th_revision.html
+++ b/src/pages/resources/subject_template_7th_revision.html
@@ -84,19 +84,25 @@
                     <table class="modern-table">
                         <thead>
                             <tr>
-                                <th colspan="2">Theory</th>
-                                <th colspan="2">Practical</th>
-                                <th rowspan="2">Total</th>
+                                <th colspan="2" rowspan="2">Theory</th>
+                                <th colspan="2">Based on LL & TSL</th>
+                                <th rowspan="2">Based on SL</th>
+                                <th rowspan="3">Total Marks</th>
                             </tr>
                             <tr>
-                                <th>ESE</th>
-                                <th>PT</th>
-                                <th>ESE #(OR)</th>
-                                <th>PA (TW)</th>
+                                <th colspan="2">Practical</th>
+                            </tr>
+                            <tr>
+                                <th>FA - TH</th>
+                                <th>SA - TH</th>
+                                <th>FA - PR</th>
+                                <th>SA - PR</th>
+                                <th>SLA</th>
                             </tr>
                         </thead>
                         <tbody>
                             <tr>
+                                <td>80</td>
                                 <td>80</td>
                                 <td>20</td>
                                 <td>25</td>
@@ -107,13 +113,17 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
-                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
-                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
-                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
-                    Practical Examination, <b>OR</b>– Oral Examination,
-                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
-                    examination
+                    Abbreviations: <b>CL</b>- ClassRoom Learning , <b>TL</b>-
+                    Tutorial Learning, <b>LL</b>-Laboratory Learning,
+                    <b>SLH</b>-Self Learning Hours, <b>NLH</b>-Notional Learning
+                    Hours, <b>FA</b> - Formative Assessment,
+                    <b>SA</b> -Summative assessment, <b>IKS</b> - Indian
+                    Knowledge System, <b>SLA</b> - Self Learning Assessment
+                </p>
+                <p>
+                    Legends: <b>@</b> Internal Assessment, <b>#</b> External
+                    Assessment, <b>*#</b> On Line Examination ,
+                    <b>@$</b> Internal Online Examination
                 </p>
             </section>
 
