Edited some Colors
Added Contributions from Rutuja Peherkar

--- a/src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,12 +61,13 @@
                     <span class="tag">6P407</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span
+                    ><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,10 +75,12 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    This course provides a comprehensive study of Cloud concepts and capabilities across the 
-                    various Cloud service models including Infrastructure as a Service (IaaS), Platform as a Service 
-                    (PaaS),Software as a Service (SaaS). It consists of topics like cloud service models, virtualization 
-                    and cloud infrastructure, and security and management of cloud. 
+                    This course provides a comprehensive study of Cloud concepts
+                    and capabilities across the various Cloud service models
+                    including Infrastructure as a Service (IaaS), Platform as a
+                    Service (PaaS),Software as a Service (SaaS). It consists of
+                    topics like cloud service models, virtualization and cloud
+                    infrastructure, and security and management of cloud.
                 </p>
             </section>
 
@@ -110,11 +113,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
