--- a/src/pages/resources/co-resources/Year 3/sem 5/Seminar_6S501.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Seminar_6S501.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -63,8 +63,7 @@
                 <div>
                     <strong>Type:</strong><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -74,14 +73,18 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Seminar is the important aspect of any curriculum. Here the students has unlimited scope to 
-                    integrate his knowledge and skills. This course is essential to understand the recent 
-                    developments and latest trends in the field. This will help the students to acquire the skill like 
-                    mining for information, analysis, communication, presentation skills etc. For effective 
-                    presentation student must have good communication skill. With a given time limit student 
-                    should be able to express his ideas and concepts, thoroughly in front of faculty members and 
-                    other students, student should be able satisfy the queries raised by them as well as student 
-                    should learn to take any feedback positively. 
+                    Seminar is the important aspect of any curriculum. Here the
+                    students has unlimited scope to integrate his knowledge and
+                    skills. This course is essential to understand the recent
+                    developments and latest trends in the field. This will help
+                    the students to acquire the skill like mining for
+                    information, analysis, communication, presentation skills
+                    etc. For effective presentation student must have good
+                    communication skill. With a given time limit student should
+                    be able to express his ideas and concepts, thoroughly in
+                    front of faculty members and other students, student should
+                    be able satisfy the queries raised by them as well as
+                    student should learn to take any feedback positively.
                 </p>
             </section>
 
@@ -114,11 +117,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
