--- a/src/pages/resources/co-resources/Year 3/sem6/Project_6S502.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/Project_6S502.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -63,8 +63,7 @@
                 <div>
                     <strong>Type:</strong><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -74,19 +73,25 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    One of the basic aim of “Project “ is to develop the ability of “learning to Learn “ on his own 
-                    and work in team. Project course provides opportunities for students to keep pace with future 
-                    changes in technology and in the acquisition of knowledge and skills as and when needed. The 
-                    course of the “Project” is designed with an aim to all these requirements of the students which 
-                    will include planning of the Programme, which must be completed within the time allocated. 
-                    The Project should never have a single solution and process of arriving at a particular solution, 
-                    the student must be required to make number of decisions after study information as he has 
-                    gathered from experiments, surveys, analysis etc.  
-                    The programme aims at developing in the student, knowledge and skills to match the current 
-                    and projected needs of industry/ user systems, social awareness and professional attitudes. In 
-                    relation to the course and topics to be taught, the student will have to constantly update 
-                    himself and keep pace with the changing technologies and the current and projected needs of 
-                    user systems.   
+                    One of the basic aim of “Project “ is to develop the ability
+                    of “learning to Learn “ on his own and work in team. Project
+                    course provides opportunities for students to keep pace with
+                    future changes in technology and in the acquisition of
+                    knowledge and skills as and when needed. The course of the
+                    “Project” is designed with an aim to all these requirements
+                    of the students which will include planning of the
+                    Programme, which must be completed within the time
+                    allocated. The Project should never have a single solution
+                    and process of arriving at a particular solution, the
+                    student must be required to make number of decisions after
+                    study information as he has gathered from experiments,
+                    surveys, analysis etc. The programme aims at developing in
+                    the student, knowledge and skills to match the current and
+                    projected needs of industry/ user systems, social awareness
+                    and professional attitudes. In relation to the course and
+                    topics to be taught, the student will have to constantly
+                    update himself and keep pace with the changing technologies
+                    and the current and projected needs of user systems.
                 </p>
             </section>
 
@@ -119,11 +124,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
