--- a/src/pages/resources/Cloud_Computing_AN.html
+++ b/src/pages/resources/Cloud_Computing_AN.html
@@ -4,10 +4,10 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>Resources | ASCE and AIDIAS</title>
-        <link rel="stylesheet" href="/src/css/color_palattee.css" />
-        <link rel="stylesheet" href="/src/css/resource_showcase.css" />
-        <link rel="stylesheet" href="/src/css/header.css" />
-        <link rel="stylesheet" href="/src/css/footer.css" />
+        <link rel="stylesheet" href="../../css/color_palattee.css" />
+        <link rel="stylesheet" href="../../css/resource_showcase.css" />
+        <link rel="stylesheet" href="../../css/header.css" />
+        <link rel="stylesheet" href="../../css/footer.css" />
         <link
             rel="stylesheet"
             type="text/css"
@@ -41,49 +41,40 @@
 
         <!-- Main -->
         <div class="breadcrumb">
-            <a href="#">CO</a>
+            <a href="#">AN</a>
             <a href="#">3rd Year</a>
             <a href="#">5th Semester</a>
-            <a href="#">Machine Learning</a>
+            <a href="#">Cloud Computing</a>
         </div>
 
         <main>
             <img
-                src="../../../../../../public/images/subjects_image/6th sem/vt.webp"
+                src="subject-image.jpg"
                 alt="Subject Image"
                 class="subject-image"
-                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
+                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>(Implant)Vocational Training</h1>
+                <h1>Cloud Computing</h1>
                 <p>
                     <strong>Subject Code:</strong>
-                    <span class="tag">6S503</span>
+                    <span class="tag">6N408</span>
                 </p>
-                <div>
-                    <strong>Type:</strong><span class="tag">Practical</span>
-                </div>
-                <p></p>
-                <div>
-                    <strong>Category:</strong>
-                    <span class="tag">non-degree</span>
-                </div>
+                <p>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
+                </p>
+                <p>
+                    <strong>Category:</strong> <span class="tag">Degree</span>
+                </p>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
 
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Computer Engineering & Information Technology technician
-                    program is mainly integrated with practical experiences. A
-                    software developer & tester are responsible gathering
-                    requirement, planning, designing, coding, testing &
-                    deploying the software in various areas of software
-                    industry. While working in the industry a technician is
-                    employed for planning, preparation, supervision, and
-                    maintaining quality of sofrware/ web sites/ networking.. In
-                    plant training program will help in enhancing the knowledge
-                    and skills of the software developer & tester
+                    This subject introduces the fundamental concepts required
+                    for mastering the field.
                 </p>
             </section>
 
@@ -106,11 +97,11 @@
                         </thead>
                         <tbody>
                             <tr>
-                                <td>00</td>
-                                <td>00</td>
-                                <td>50</td>
-                                <td>50</td>
-                                <td>100</td>
+                                <td>80</td>
+                                <td>20</td>
+                                <td>25</td>
+                                <td>25</td>
+                                <td>150</td>
                             </tr>
                         </tbody>
                     </table>
@@ -119,8 +110,7 @@
                     Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
                     Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
                     <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
-                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
-                    Practical Examination, <b>OR</b>– Oral Examination,
+                    Test, <b>PA</b>- Progressive Assessment, <b>OR</b>– Oral Examination,
                     <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
@@ -135,7 +125,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -146,7 +136,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <a href="document.pdf" class="download-link"
@@ -156,7 +146,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <a href="document.pdf" class="download-link"
@@ -172,7 +162,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -183,7 +173,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -194,7 +184,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -211,7 +201,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -222,7 +212,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -233,7 +223,7 @@
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
                             <p class="pdf-title">PDF Title</p>
                             <p class="pdf-author">Author Name</p>
@@ -254,7 +244,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -265,7 +255,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -281,7 +271,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -292,7 +282,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -308,7 +298,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -319,7 +309,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -340,7 +330,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -351,7 +341,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -367,7 +357,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -378,7 +368,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -394,7 +384,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -405,7 +395,7 @@
                             <div class="pdf-container">
                                 <img
                                     src="pdf-preview.jpg"
-                                    onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                    onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                                     alt="Curriculum1" />
                                 <p class="pdf-title">PDF Title</p>
                                 <p class="pdf-author">Author Name</p>
@@ -423,8 +413,8 @@
                 <div class="horizontal-scroll">
                     <div class="pdf-container">
                         <img
-                            src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                            src="../../../public/images/"
+                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
                         <p class="pdf-author">Author Name</p>
@@ -433,7 +423,7 @@
                     <div class="pdf-container">
                         <img
                             src="pdf-preview.jpg"
-                            onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                            onerror="this.onerror=null; this.src='../../../public/images/default-fallback-image.webp'"
                             alt="Curriculum1" />
                         <p class="pdf-title">Video Title</p>
                         <p class="pdf-author">Author Name</p>
