--- a/src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/AMM_6P401.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,10 +61,10 @@
                     <span class="tag">6P401</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -74,10 +74,12 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Advanced Microprocessor & Microcontroller is applied level course aims for interfacing of 
-                    various peripheral elements with microcontroller to design an automated system. This course 
-                    covers introduction to families of microprocessors from 32 bit 64 bit and embed C programming 
-                    environment to control peripheral devices. 
+                    Advanced Microprocessor & Microcontroller is applied level
+                    course aims for interfacing of various peripheral elements
+                    with microcontroller to design an automated system. This
+                    course covers introduction to families of microprocessors
+                    from 32 bit 64 bit and embed C programming environment to
+                    control peripheral devices.
                 </p>
             </section>
 
@@ -110,11 +112,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
@@ -163,13 +166,44 @@
                     <h3>Notes</h3>
                     <div class="sub-section">
                         <div class="pdf-container">
+                            <!-- https://drive.google.com/file/d/1vC-zKMVP7elQFW36JGrl6iRf5VosbAuB/view?usp=drive_link -->
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1vC-zKMVP7elQFW36JGrl6iRf5VosbAuB"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                                alt="Notes" />
+                            <p class="pdf-title">Chapter 1 & 2 Notes</p>
+                            <p class="pdf-author">Rutuja Peherkar</p>
+                            <a
+                                href="https://drive.google.com/uc?export=download&id=1vC-zKMVP7elQFW36JGrl6iRf5VosbAuB"
+                                class="download-link"
+                                >Download</a
+                            >
+                        </div>
+                        <div class="pdf-container">
+                            <!-- https://drive.google.com/file/d/1L0DYqXbtUS5WH1E2u3H24hUoB0PHKFHS/view?usp=drive_link -->
+                            <img
+                                src="https://drive.google.com/thumbnail?id=1L0DYqXbtUS5WH1E2u3H24hUoB0PHKFHS"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                alt="Notes" />
+                            <p class="pdf-title">Chapter 3 & 4 Notes</p>
+                            <p class="pdf-author">Rutuja Peherkar</p>
+                            <a
+                                href="https://drive.google.com/uc?export=download&id=1L0DYqXbtUS5WH1E2u3H24hUoB0PHKFHS"
+                                class="download-link"
+                                >Download</a
+                            >
+                        </div>
+                        <div class="pdf-container">
+                            <!-- https://drive.google.com/file/d/1OCx3cAR5RfPMOo3fIOZKqix5UBWVtgOW/view?usp=drive_link -->
+                            <img
+                                src="https://drive.google.com/thumbnail?id=1OCx3cAR5RfPMOo3fIOZKqix5UBWVtgOW"
+                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
+                                alt="Notes" />
+                            <p class="pdf-title">Chapter 5 Notes</p>
+                            <p class="pdf-author">Rutuja Peherkar</p>
+                            <a
+                                href="https://drive.google.com/uc?export=download&id=1OCx3cAR5RfPMOo3fIOZKqix5UBWVtgOW"
+                                class="download-link"
                                 >Download</a
                             >
                         </div>
