--- a/src/pages/resources/co-resources/Year 3/sem 5/ISMS_6P405.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/ISMS_6P405.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,12 +61,13 @@
                     <span class="tag">6P405</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span
+                    ><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,11 +75,13 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Information Storage Management System is a applied level course aims to recognize the 
-                    importance of Storage, Evolution of Storage Technology, Data and Information, Structured and 
-                    Unstructured Information, Information Life cycle Management. This course gives insight to 
-                    protect data, RAID, RAID levels, Implementation of Software and Hardware RAID, RAID 
-                    Impact on Disk Performance.  
+                    Information Storage Management System is a applied level
+                    course aims to recognize the importance of Storage,
+                    Evolution of Storage Technology, Data and Information,
+                    Structured and Unstructured Information, Information Life
+                    cycle Management. This course gives insight to protect data,
+                    RAID, RAID levels, Implementation of Software and Hardware
+                    RAID, RAID Impact on Disk Performance.
                 </p>
             </section>
 
@@ -111,11 +114,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
