--- a/src/pages/resources/co-resources/Year 3/sem 5/Industrial_Organization_and_management_6G305.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/Industrial_Organization_and_management_6G305.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,12 +61,13 @@
                     <span class="tag">6G305</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">non-degree</span>
+                    <strong>Category:</strong>
+                    <span class="tag">non-degree</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,14 +75,19 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Diploma graduate works at middle management level in the industries/engineering organizations. 
-                    Therefore he has to be proficient in planning, organizing & coordinating various activities of 
-                    industries/ organizations or when he is required to work in different types of projects. They are also 
-                    expected to deal with workforce and management problems. In the present era of competition, optimum 
-                    utilization of the resources with achieving higher productivity is essential for any industry to survive. 
-                    Quality and cost controls are also other important factors which contribute to the day to day supervision 
-                    issues. This course aims to deal effectively with such issues along with familiarization of acts and laws 
-                    applied to industries. 
+                    Diploma graduate works at middle management level in the
+                    industries/engineering organizations. Therefore he has to be
+                    proficient in planning, organizing & coordinating various
+                    activities of industries/ organizations or when he is
+                    required to work in different types of projects. They are
+                    also expected to deal with workforce and management
+                    problems. In the present era of competition, optimum
+                    utilization of the resources with achieving higher
+                    productivity is essential for any industry to survive.
+                    Quality and cost controls are also other important factors
+                    which contribute to the day to day supervision issues. This
+                    course aims to deal effectively with such issues along with
+                    familiarization of acts and laws applied to industries.
                 </p>
             </section>
 
@@ -114,11 +120,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
@@ -166,17 +173,6 @@
                 <div class="block-item">
                     <h3>Notes</h3>
                     <div class="sub-section">
-                        <div class="pdf-container">
-                            <img
-                                src="pdf-preview.jpg"
-                                onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
-                                >Download</a
-                            >
-                        </div>
                         <div class="pdf-container">
                             <img
                                 src="pdf-preview.jpg"
@@ -335,13 +331,16 @@
                         <h3>Presentations</h3>
                         <div class="sub-section">
                             <div class="pdf-container">
+                                <!-- https://docs.google.com/presentation/d/1HXRxHtHzlOmfxXhoWqzbj9gAaqreZIRQ/edit?usp=drive_link&ouid=111219447226611058863&rtpof=true&sd=true -->
                                 <img
-                                    src="pdf-preview.jpg"
+                                    src="https://drive.google.com/thumbnail?id=1HXRxHtHzlOmfxXhoWqzbj9gAaqreZIRQ"
                                     onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
-                                    alt="Curriculum1" />
-                                <p class="pdf-title">PDF Title</p>
-                                <p class="pdf-author">Author Name</p>
-                                <a href="document.pdf" class="download-link"
+                                    alt="Presentation" />
+                                <p class="pdf-title">Chapter 3 Presentation</p>
+                                <p class="pdf-author">Rutuja Peherkar</p>
+                                <a
+                                    href="https://drive.google.com/uc?export=download&id=1HXRxHtHzlOmfxXhoWqzbj9gAaqreZIRQ"
+                                    class="download-link"
                                     >Download</a
                                 >
                             </div>
