--- a/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/LPL_6P404.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,10 +61,10 @@
                     <span class="tag">6P404</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -74,11 +74,13 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Linux Programming Lab is an applied level course to perform various activities on open source 
-                    operating system.  This course aims at extending the knowledge of open source operating 
-                    system and get exposure of handling system call that directly talk to  the kernel. This course 
-                    includes basics of Linux operating system, system calls, Shell programming and process 
-                    management. 
+                    Linux Programming Lab is an applied level course to perform
+                    various activities on open source operating system. This
+                    course aims at extending the knowledge of open source
+                    operating system and get exposure of handling system call
+                    that directly talk to the kernel. This course includes
+                    basics of Linux operating system, system calls, Shell
+                    programming and process management.
                 </p>
             </section>
 
@@ -111,11 +113,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
