--- a/src/pages/resources/co-resources/Year 3/sem 5/moc_6P402.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/moc_6P402.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,12 +61,13 @@
                     <span class="tag">6P402</span>
                 </p>
                 <div>
-                    <strong>Type:</strong> <span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong> <span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">non-degree</span>
+                    <strong>Category:</strong>
+                    <span class="tag">non-degree</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,12 +75,13 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Mobile computing is applied level course that designed to needs more skilled technicians for 
-                    operation, maintenance & servicing of mobile cellular system. As exponential growth in mobile 
-                    computing, student needs to learn different technologies such as GSM and  CDMA 
-                    their 
-                    variations and the 4G. This course includes wireless communication, mobile handset, cellular 
-                    concepts, VoIP, WLL, WAP and WML. 
+                    Mobile computing is applied level course that designed to
+                    needs more skilled technicians for operation, maintenance &
+                    servicing of mobile cellular system. As exponential growth
+                    in mobile computing, student needs to learn different
+                    technologies such as GSM and CDMA their variations and the
+                    4G. This course includes wireless communication, mobile
+                    handset, cellular concepts, VoIP, WLL, WAP and WML.
                 </p>
             </section>
 
@@ -112,11 +114,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
