--- a/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/AJp_6S504.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,10 +61,10 @@
                     <span class="tag">6S504</span>
                 </p>
                 <div>
-                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -74,9 +74,11 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Advanced Java Programming is diversified level course which provides skills 
-                    for developing powerful GUI based friendly user interface, server side programming with 
-                    database. It is used to develop dynamic web site and client server application.
+                    Advanced Java Programming is diversified level course which
+                    provides skills for developing powerful GUI based friendly
+                    user interface, server side programming with database. It is
+                    used to develop dynamic web site and client server
+                    application.
                 </p>
             </section>
 
@@ -109,11 +111,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
