--- a/src/pages/resources/co-resources/Year 3/sem6/GIS_6P503.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/GIS_6P503.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -61,12 +61,13 @@
                     <span class="tag">6S503</span>
                 </p>
                 <div>
-                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span
+                    ><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,12 +75,14 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Geographic Information System (GIS) is applied level course deals with the analysis and 
-                    management of geographic information. This course offers an introduction to methods of 
-                    managing and processing geographic information. Emphasis will be placed on the nature of 
-                    geographic information, data models and structures for geographic information, geographic data 
-                    input, data manipulation and data storage, spatial analytic and modeling techniques, and error 
-                    analysis. 
+                    Geographic Information System (GIS) is applied level course
+                    deals with the analysis and management of geographic
+                    information. This course offers an introduction to methods
+                    of managing and processing geographic information. Emphasis
+                    will be placed on the nature of geographic information, data
+                    models and structures for geographic information, geographic
+                    data input, data manipulation and data storage, spatial
+                    analytic and modeling techniques, and error analysis.
                 </p>
             </section>
 
@@ -112,11 +115,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
