--- a/src/pages/resources/co-resources/Year 3/sem6/ST6S505.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/ST6S505.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -55,16 +55,16 @@
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Software Testing </h1>
+                <h1>Software Testing</h1>
                 <p>
                     <strong>Subject Code:</strong>
                     <span class="tag">6S505</span>
                 </p>
                 <div>
-                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
                     <strong>Category:</strong> <span class="tag">Degree</span>
                 </div>
@@ -74,10 +74,12 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Software testing is diversified level course, helps in testing the software application or 
-                    product against user requirements for the assurance of bug free software. It aims to plan and 
-                    write good test coverage according to its specifications. This course includes characteristics 
-                    of tester, qualities of software and types of testing.
+                    Software testing is diversified level course, helps in
+                    testing the software application or product against user
+                    requirements for the assurance of bug free software. It aims
+                    to plan and write good test coverage according to its
+                    specifications. This course includes characteristics of
+                    tester, qualities of software and types of testing.
                 </p>
             </section>
 
@@ -110,11 +112,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
