--- a/src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/UML_6P504.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -55,18 +55,21 @@
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Object Oriented Technology using Unified Modeling design</h1>
+                <h1>
+                    Object Oriented Technology using Unified Modeling design
+                </h1>
                 <p>
                     <strong>Subject Code:</strong>
                     <span class="tag">6P504</span>
                 </p>
                 <div>
-                    <strong>Type:</strong><span class="tag">Lecture</span><span class="tag">Practical</span>
+                    <strong>Type:</strong><span class="tag">Lecture</span
+                    ><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">Degree</span><span class="tag">Elective</span>
+                    <strong>Category:</strong> <span class="tag">Degree</span
+                    ><span class="tag">Elective</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,11 +77,15 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    Object Oriented Technology is a diversified level course intends to create confidence in students 
-                    of Computer Engineering for an Object oriented approach to software development. It is based on 
-                    modeling objects from the real world and then using the model to build a language independent 
-                    design. This subject will be useful for student to understand concepts of object Oriented 
-                    Programming Systems & to model these concepts using UML for any application.
+                    Object Oriented Technology is a diversified level course
+                    intends to create confidence in students of Computer
+                    Engineering for an Object oriented approach to software
+                    development. It is based on modeling objects from the real
+                    world and then using the model to build a language
+                    independent design. This subject will be useful for student
+                    to understand concepts of object Oriented Programming
+                    Systems & to model these concepts using UML for any
+                    application.
                 </p>
             </section>
 
@@ -111,11 +118,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
