--- a/src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html
+++ b/src/pages/resources/co-resources/Year 3/sem6/edp_6G306.html
@@ -23,7 +23,7 @@
                 }
             }
             header a#Resources {
-                color: var(--web-text-hover-light-theme-color);
+                color: var(--web-text-hover-color);
             }
             main {
                 position: static;
@@ -55,7 +55,7 @@
                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'" />
 
             <section class="section">
-                <h1>Entrepreneurship Development </h1>
+                <h1>Entrepreneurship Development</h1>
                 <p>
                     <strong>Subject Code:</strong>
                     <span class="tag">6S306</span>
@@ -63,10 +63,10 @@
                 <div>
                     <strong>Type:</strong><span class="tag">Practical</span>
                 </div>
-                <p>
-                </p>
+                <p></p>
                 <div>
-                    <strong>Category:</strong> <span class="tag">non-degree</span>
+                    <strong>Category:</strong>
+                    <span class="tag">non-degree</span>
                 </div>
                 <p><strong>Revision:</strong> <span class="tag">6th</span></p>
             </section>
@@ -74,12 +74,16 @@
             <section class="section">
                 <h2>Subject Description</h2>
                 <p>
-                    In the post liberalization era significant growth in industrial sector has led to creation of huge 
-                    opportunities in manufacturing and service sector. In such a scenario especially in Indian contest 
-                    it has led to innumerable opportunities for first generation entrepreneurs on a large scale. 
-                    Therefore it is expected that engineers need to be developed for manufacturing, service sector and 
-                    entrepreneurship development. This course, which represents Allied level of courses, aims at 
-                    imparting entrepreneurial skills amongst engineers of all disciplines. 
+                    In the post liberalization era significant growth in
+                    industrial sector has led to creation of huge opportunities
+                    in manufacturing and service sector. In such a scenario
+                    especially in Indian contest it has led to innumerable
+                    opportunities for first generation entrepreneurs on a large
+                    scale. Therefore it is expected that engineers need to be
+                    developed for manufacturing, service sector and
+                    entrepreneurship development. This course, which represents
+                    Allied level of courses, aims at imparting entrepreneurial
+                    skills amongst engineers of all disciplines.
                 </p>
             </section>
 
@@ -112,11 +116,12 @@
                     </table>
                 </div>
                 <p>
-                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided Theory
-                    Practice ; <b>P</b>-Practical; <b>C</b>- Credits; <b>ESE</b>- End Semester
-                    Examination; <b>PT</b>– Progressive Test, <b>PA</b>- Progressive
-                    Assessment, <b>PR</b>- Practical Examination, <b>OR</b>– Oral
-                    Examination, <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
+                    Legends : <b>L</b>-Lecture; <b>T</b>-Tutorial/Teacher Guided
+                    Theory Practice ; <b>P</b>-Practical; <b>C</b>- Credits;
+                    <b>ESE</b>- End Semester Examination; <b>PT</b>– Progressive
+                    Test, <b>PA</b>- Progressive Assessment, <b>PR</b>-
+                    Practical Examination, <b>OR</b>– Oral Examination,
+                    <b>TW</b> - Term Work, <b>#</b> External, <b>@</b> Internal
                     examination
                 </p>
             </section>
