Added the CN Page

--- a/src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html
+++ b/src/pages/resources/co-resources/Year 3/sem 5/CC_6P407.html
@@ -164,34 +164,34 @@
                     <div class="sub-section">
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=1bO6wgJISUzRTF8zyFy7IgIeHseurkQ0d"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
-                            <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                            <p class="pdf-title">Unit 1</p>
+                            <p class="pdf-author">Author Name : Unknown</p>
+                            <a href="https://drive.google.com/uc?export=download&id=1bO6wgJISUzRTF8zyFy7IgIeHseurkQ0d" class="download-link"
                                 >Download</a
                             >
                         </div>
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                src="https://drive.google.com/thumbnail?id=18DB0v706iTmOziYzKqA0NQIbOzKaVlaa"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
+                            <p class="pdf-title">Unit 2</p>
                             <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                            <a href="https://drive.google.com/uc?export=download&id=1dL1IYn9CMAT7-PIsGyb6HEQXxvOh96vK" class="download-link"
                                 >Download</a
                             >
                         </div>
                         <div class="pdf-container">
                             <img
-                                src="pdf-preview.jpg"
+                                                            src="https://drive.google.com/thumbnail?id=1yKHMBRPATODcXbeVnsFNP87vaNAj97uo"
                                 onerror="this.onerror=null; this.src='../../../../../../public/images/default-fallback-image.webp'"
                                 alt="Curriculum1" />
-                            <p class="pdf-title">PDF Title</p>
+                            <p class="pdf-title">Unit 3</p>
                             <p class="pdf-author">Author Name</p>
-                            <a href="document.pdf" class="download-link"
+                            <a href="https://drive.google.com/uc?export=download&id=1dr5KcWGzuLRUjVi1UjKdYUw0Mob8aVMI" class="download-link"
                                 >Download</a
                             >
                         </div>
